--- a/.htaccess
+++ b/.htaccess
@@ -1,60 +1,14 @@
-# Habilita o módulo de reescrita
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
+# Proteger arquivos e diretórios
+<FilesMatch "^\.">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
 
-    # Se não for um arquivo ou diretório existente
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-
-    # Redireciona para o index.php
-    RewriteRule ^(.*)$ index.php [QSA,L]
-</IfModule>
-
-# Se o mod_rewrite não estiver disponível
-<IfModule !mod_rewrite.c>
-    ErrorDocument 404 /index.php
-</IfModule>
-
-# Proteção contra listagem de diretórios
 Options -Indexes
 
-# Define o charset padrão
-AddDefaultCharset UTF-8
-
-# Compressão GZIP
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/xml
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/rss+xml
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/x-javascript
-</IfModule>
-
-# Cache Control
-<IfModule mod_expires.c>
-    ExpiresActive On
-    ExpiresByType image/jpg "access plus 1 year"
-    ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType text/javascript "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType application/x-javascript "access plus 1 month"
-    ExpiresByType text/html "access plus 1 minute"
-    ExpiresByType application/xhtml+xml "access plus 1 minute"
-</IfModule>
-
-# Adiciona cabeçalhos de segurança
-<IfModule mod_headers.c>
-    Header set X-Content-Type-Options "nosniff"
-    Header set X-XSS-Protection "1; mode=block"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set Referrer-Policy "strict-origin-when-cross-origin"
-    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+# Redirecionar tudo para public_html
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule ^$ public_html/ [L]
+    RewriteRule (.*) public_html/$1 [L]
 </IfModule>
